fix: fixed #1042 spacing atoms are clickable and selectable

--- a/css/core.less
+++ b/css/core.less
@@ -412,36 +412,43 @@ body.ML__fonts-loading .ML__base {
   .negativethinspace {
     display: inline-block;
     margin-left: -@thinspace;
+    height: 0.71em;
   }
 
   .thinspace {
     display: inline-block;
     width: @thinspace;
+    height: 0.71em;
   }
 
   .mediumspace {
     display: inline-block;
     width: @mediumspace;
+    height: 0.71em;
   }
 
   .thickspace {
     display: inline-block;
     width: @thickspace;
+    height: 0.71em;
   }
 
   .enspace {
     display: inline-block;
     width: 0.5em;
+    height: 0.71em;
   }
 
   .quad {
     display: inline-block;
     width: 1em;
+    height: 0.71em;
   }
 
   .qquad {
     display: inline-block;
     width: 2em;
+    height: 0.71em;
   }
 
   .llap,
